--- a/Home/home.css
+++ b/Home/home.css
@@ -133,7 +133,7 @@ nav ul li a:hover {
 }
 
 .room-text h2 {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Antic Didone', serif;
     font-size: 2em;
 }
 
@@ -173,7 +173,7 @@ nav ul li a:hover {
 }
 
 .dining-text h2 {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Antic Didone', serif;
     font-size: 2em;
 }
 
@@ -203,7 +203,7 @@ nav ul li a:hover {
 }
 
 .amenities-text h2 {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Antic Didone', serif;
     font-size: 2em;
     padding: 1%;
 }
