--- a/Home/home.css
+++ b/Home/home.css
@@ -77,6 +77,7 @@ nav ul li a:hover {
     justify-content: space-around;
     margin-top: 5%;
     margin-bottom: 5%;
+    font-family: 'Prata', serif;
 }
 
 .hero-text-container h1 {
