--- a/Home/member.css
+++ b/Home/member.css
@@ -65,3 +65,17 @@ nav ul li a:hover {
 .book-now-button a:hover {
    color: rgb(255, 230, 0);
 }
+
+.member-img {
+   width: 100%;
+}
+
+.hero-text-container {
+   display: flex;
+   flex-flow: column wrap;
+   align-items: center;
+   justify-content: space-around;
+   margin-top: 5%;
+   margin-bottom: 5%;
+   font-family: 'Libre Baskerville', serif;
+}
