--- a/Home/member.css
+++ b/Home/member.css
@@ -66,16 +66,25 @@ nav ul li a:hover {
    color: rgb(255, 230, 0);
 }
 
-.member-img {
-   width: 100%;
-}
+.container {
+   position: relative;
+   width: 100%; /* Change this width to adjust the image size */
+ }
 
-.hero-text-container {
-   display: flex;
-   flex-flow: column wrap;
-   align-items: center;
-   justify-content: space-around;
-   margin-top: 5%;
-   margin-bottom: 5%;
-   font-family: 'Libre Baskerville', serif;
-}
+ .image {
+   width: 100%;
+   height: auto;
+ }
+
+ .text-overlay {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   background-color: rgba(0, 0, 0, 0.7); /* Change the opacity and color as needed */
+   padding: 10px;
+   color: white;
+   font-size: 39px;
+   font-weight: bold;
+   font-family: 'Abril Fatface', cursive;;
+ }
