--- a/Home/contact.css
+++ b/Home/contact.css
@@ -90,3 +90,8 @@ footer {
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
 }
+
+.fbutton {
+   text-decoration: none;
+   color: #000000;
+}
