--- a/Home/dining.css
+++ b/Home/dining.css
@@ -94,3 +94,8 @@ footer {
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
 }
+
+.fbutton {
+   text-decoration: none;
+   color: #000000;
+}
