--- a/Home/rooms.css
+++ b/Home/rooms.css
@@ -93,3 +93,8 @@ footer {
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
 }
+
+.fbutton {
+   text-decoration: none;
+   color: #000000;
+}
