--- a/Home/member.css
+++ b/Home/member.css
@@ -88,6 +88,38 @@ nav ul li a:hover {
    font-weight: bold;
    font-family: 'Prata', sans-serif;
  }
+
+
+ .hero-text-container {
+   display: flex;
+   flex-flow: column wrap;
+   align-items: center;
+   justify-content: space-around;
+   margin-top: 5%;
+   margin-bottom: 5%;
+   font-family: 'Prata', serif;
+}
+
+.hero-text-container h1 {
+   font-size: 2em;
+   text-align: center;
+   font-family: 'Playfair Display', serif;
+   margin-bottom: 2.5%;
+}
+
+.hero-book-now-button {
+   background-color: rgba(148, 126, 0, 0.788);
+   padding: 1%;
+   font-family: 'Merriweather', serif;
+   font-size: 2em;
+   text-decoration: none;
+   color: azure;
+}
+
+.hero-book-now-button:hover {
+   color: rgb(0, 0, 0);
+}
+
  .grid-container {
    display: grid;
    grid-template-areas:
