--- a/Home/contact.css
+++ b/Home/contact.css
@@ -59,16 +59,23 @@ nav ul li a:hover {
    color: white;
    margin-left: 20px;
    margin-right: 20px;
-   font-family: 'Merriweather', serif;;
+   font-family: 'Merriweather', serif;
 }
 
-footer {
-   font-family: 'Roboto', sans-serif;
-   background-color: beige;
-   color: black;
-   padding: 1%;
-   text-align: center; 
+.book-now-button a:hover {
+   color: rgb(255, 230, 0);
+   justify-content: center;
 }
+
+.hero-section img {
+   width: 100%;
+}
+
+ .container {
+   max-width: 400px;
+   margin: 0 auto;
+   padding: 20px;
+ }
  
 .top-footer {
    background-color: rgba(148, 126, 0, 0.788); 
@@ -95,3 +102,52 @@ footer {
    text-decoration: none;
    color: #000000;
 }
+
+.container {
+   max-width: 400px;
+   margin: 0 auto;
+   padding: 20px;
+ }
+ 
+ .description {
+   text-align: center;
+   margin-bottom: 20px;
+   font-family: 'Crete Round', serif;
+ }
+ 
+ form {
+   display: grid;
+   grid-gap: 10px;
+ }
+ 
+ label {
+   font-family: 'Merriweather', serif;
+ }
+ 
+ input {
+   width: 100%;
+   padding: 10px;
+   font-size: 16px;
+   border: 1px solid #ccc;
+   border-radius: 4px;
+}
+
+ .submit {
+   background-color: rgba(148, 126, 0, 0.788);
+   color: #fff;
+   padding: 10px 20px;
+   font-size: 16px;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
+   transition: background-color 0.3s;
+   font-family: 'Merriweather', serif;
+ }
+
+ .submit:hover {
+   background-color: rgba(148, 126, 0, 0.432);
+ }
+ #home{
+   width: 100%;
+   height: auto;
+ }
