--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -1,6 +1,7 @@
 * {
    margin: 0;
    padding: 0;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
  
 header {
@@ -102,4 +103,42 @@ footer {
 .fbutton {
    text-decoration: none;
    color: #000000;
+}
+
+h2 {
+   margin-top: 20px;
+   text-align: center;
+   font-size: 30px;
+   margin-bottom: 20px;
+}
+
+.flex {
+   display: flex;
+   flex-direction: row;
+   margin-bottom: 100px;
+
+}
+
+.content {
+   margin: 0 10px;
+}
+
+.para {
+   padding-top: 15px;
+   padding-bottom: 15px;
+   width: calc(100% - 800px);
+   height: 300px;
+   overflow: scroll;
+}
+
+h3 {
+   text-align: center;
+   margin-bottom: 10px;
+}
+
+@media screen and (max-width: 1300px) {
+   .unflex {
+      flex-direction: column;
+   }
+
 }
