--- a/Home/booking.css
+++ b/Home/booking.css
@@ -1,168 +1,227 @@
 * {
-    margin: 0;
-    padding: 0;
- }
-  
- header {
-    background-color: white;
-    padding: 0 20%;
-    height: 100px;
-    font-family: 'Roboto', sans-serif;
- }
+   margin: 0;
+   padding: 0;
+}
  
- nav {
-    display: flex;
-    justify-content: space-between;
- }
+header {
+   background-color: white;
+   padding: 0 20%;
+   height: 100px;
+   font-family: 'Roboto', sans-serif;
+}
+
+nav {
+   display: flex;
+   justify-content: space-between;
+}
+
+nav img {
+   height: 100px;
+}
  
- nav img {
-    height: 100px;
- }
-  
- nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
- }
-  
- nav ul li {
-    margin: 0 10px;
-    display: flex;
-    align-items: center;
-    
- }
-  
- nav ul li a {
-    color: black;
-    text-decoration: none;
-    font-size: 17px;
-    font-family: 'Raleway', sans-serif;
- }
+nav ul {
+   list-style-type: none;
+   display: flex;
+   justify-content: center;
+}
  
- nav ul li a:hover {
-    color: rgb(255, 230, 0);
- }
+nav ul li {
+   margin: 0 10px;
+   display: flex;
+   align-items: center;
+   
+}
  
- .book-now-button {
-    background-color: #2c2c2c;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
- }
- 
- .book-now-button a {
-    text-decoration: none;
-    font-size: 1em;
-    color: white;
-    margin-left: 20px;
-    margin-right: 20px;
-    font-family: 'Merriweather', serif;;
- }
- 
- .book-now-button a:hover {
-    color: rgb(255, 230, 0);
- }
+nav ul li a {
+   color: black;
+   text-decoration: none;
+   font-size: 17px;
+   font-family: 'Raleway', sans-serif;
+}
+
+nav ul li a:hover {
+   color: rgb(255, 230, 0);
+}
+
+.book-now-button {
+   background-color: #2c2c2c;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   margin-top: 10px;
+   margin-bottom: 10px;
+}
+
+.book-now-button a {
+   text-decoration: none;
+   font-size: 1em;
+   color: white;
+   margin-left: 20px;
+   margin-right: 20px;
+   font-family: 'Merriweather', serif;;
+}
+
+.book-now-button a:hover {
+   color: rgb(255, 230, 0);
+}
 
 h1 {
-    text-align: center;
+   text-align: center;
 }
 
 form {
-    margin-top: 20px;
+   margin-top: 20px;
 }
 
 label {
-    display: block;
-    margin-bottom: 5px;
+   display: block;
+   margin-bottom: 5px;
 }
 
 input[type="text"],
 input[type="tel"],
 input[type="number"],
 select {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
+   width: 100%;
+   padding: 8px;
+   margin-bottom: 10px;
+   border-radius: 4px;
+   border: 1px solid #ccc;
 }
 
 button[type="submit"] {
-    background-color: #dbae1c;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+   background-color: #dbae1c;
+   color: white;
+   padding: 10px 20px;
+   border: none;
+   border-radius: 4px;
+   cursor: pointer;
 }
 
 #room-images {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
+   display: flex;
+   justify-content: space-between;
+   margin-top: 20px;
 }
 
 .room-image {
-    width: 200px;
-    height: 150px;
-    background-size: cover;
-    background-position: center;
-    display: none;
+   width: 200px;
+   height: 150px;
+   background-size: cover;
+   background-position: center;
+   display: none;
 }
 
 #deluxe-image {
-    background-image: url('deluxe.jpg');
+   background-image: url('deluxe.jpg');
 }
 
 #executive-image {
-    background-image: url('executive.jpg');
+   background-image: url('executive.jpg');
 }
 
 #luxury-image {
-    background-image: url('luxury.jpg');
+   background-image: url('luxury.jpg');
 }
 
 #premium-image {
-    background-image: url('premium.jpg');
+   background-image: url('premium.jpg');
 }
 
 .show-image {
-    display: block;
+   display: block;
 }
 
 footer {
-    font-family: 'Roboto', sans-serif;
-    background-color: beige;
-    color: black;
-    padding: 1%;
-    text-align: center; 
- }
-  
- .top-footer {
-    background-color: rgba(148, 126, 0, 0.788); 
-    padding: 2px;
-    color: #fff; 
-    text-align: center;
- }
-  
- .footer-buttons {
-    display: flex;
-    justify-content: right;
- }
-  
- .footer-buttons button {
-    background-color: rgba(148, 126, 0, 0); 
-    border: none;
-    color: #333; 
-    margin-right: 25px;
-    cursor: pointer;
-    font-family: 'Raleway', sans-serif;
-    text-decoration: none;
- }
- 
- .fbutton {
-    text-decoration: none;
-    color: #000000;
- }
+  font-family: 'Roboto', sans-serif;
+  background-color: beige;
+  color: black;
+  padding: 1%;
+  text-align: center; 
+}
+
+.top-footer {
+  background-color: rgba(148, 126, 0, 0.788); 
+  padding: 2px;
+  color: #fff; 
+  text-align: center;
+}
+
+.footer-buttons {
+  display: flex;
+  justify-content: right;
+}
+
+.footer-buttons button {
+  background-color: rgba(148, 126, 0, 0); 
+  border: none;
+  color: #333; 
+  margin-right: 25px;
+  cursor: pointer;
+  font-family: 'Raleway', sans-serif;
+  text-decoration: none;
+}
+
+.fbutton {
+  text-decoration: none;
+  color: #000000;
+}
+
+#gold {
+background-color: #dbae1c;
+margin-top: 100px;
+font-family: 'Roboto', sans-serif;
+padding-bottom: 25px;
+}
+
+#forms {
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+overflow: auto;
+}
+
+@media screen and (max-width: 1150px){
+  #forms {
+     flex-direction: column;
+  }
+
+  form {
+     margin-left: 20px;
+  }
+}
+
+.inputs {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  min-width: 370px;
+}
+
+label {
+  min-width: 200px;
+  font-size: 20px;
+}
+
+.day {
+width: 90px;
+height: 35px;
+margin-right: 5px;
+}
+
+.month {
+width: 90px;
+height: 35px;
+margin-right: 5px;
+}
+
+.year {
+width: 180px;
+height: 35px;
+margin-right: 5px;
+}
+
+select {
+width: 200px;
+height: 35px;
+}
