--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -116,7 +116,8 @@ h2 {
    display: flex;
    flex-direction: row;
    margin-bottom: 100px;
-
+   align-items: center;
+   background-color: #ffeafc;
 }
 
 .content {
@@ -124,11 +125,12 @@ h2 {
 }
 
 .para {
-   padding-top: 15px;
-   padding-bottom: 15px;
    width: calc(100% - 800px);
-   height: 300px;
+   max-height: 300px;
+   min-width: 300px;
    overflow: scroll;
+   background-color: rgb(255, 232, 174);
+   padding: 15px;
 }
 
 h3 {
@@ -136,9 +138,42 @@ h3 {
    margin-bottom: 10px;
 }
 
-@media screen and (max-width: 1300px) {
-   .unflex {
-      flex-direction: column;
+.unpara {
+   display: none;
+   visibility: collapse;
+}
+
+@media screen and (max-width: 1190px) {
+
+   .flex {
+      background-color: white;
+      margin-bottom: 30px;
+      align-items: normal;
    }
 
+   .para {
+      display: none;
+      visibility: collapse;
+   }
+
+   .unpara {
+      visibility: visible;
+      display: block;
+      max-height: 150px;
+      overflow: auto;
+      margin-left: 0;
+      margin-right: 0;
+      margin-bottom: 100px;
+      background-color: rgb(255, 232, 174);
+      padding: 15px 25px;
+   }
+
+   .img {
+      width: 50%;
+      height: 50%;
+   }
+
+   * {
+      overflow-x: hidden;
+   }
 }
