--- a/Home/contact.css
+++ b/Home/contact.css
@@ -17,6 +17,7 @@ nav {
 
 nav img {
    height: 100px;
+   border-radius: 4px;
 }
  
 nav ul {
@@ -51,6 +52,8 @@ nav ul li a:hover {
    align-items: center;
    margin-top: 10px;
    margin-bottom: 10px;
+   border-radius: 4px;
+   height: 70px;
 }
 
 .book-now-button a {
@@ -77,8 +80,8 @@ nav ul li a:hover {
    padding: 20px;
  }
  
-.top-footer {
-   background-color: rgba(148, 126, 0, 0.788); 
+ .top-footer {
+   background-color: #d4af37; 
    padding: 2px;
    color: #fff; 
    text-align: center;
@@ -96,6 +99,8 @@ nav ul li a:hover {
    margin-right: 25px;
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
+   text-decoration: none;
+   font-size: 14px;
 }
 
 .fbutton {
