--- a/Home/dining.css
+++ b/Home/dining.css
@@ -17,6 +17,7 @@ nav {
 
 nav img {
    height: 100px;
+   border-radius: 4px;
 }
  
 nav ul {
@@ -51,6 +52,8 @@ nav ul li a:hover {
    align-items: center;
    margin-top: 10px;
    margin-bottom: 10px;
+   border-radius: 4px;
+   height: 70px;
 }
 
 .book-now-button a {
@@ -59,7 +62,7 @@ nav ul li a:hover {
    color: white;
    margin-left: 20px;
    margin-right: 20px;
-   font-family: 'Merriweather', serif;;
+   font-family: 'Merriweather', serif;
 }
 
 .book-now-button a:hover {
@@ -75,7 +78,7 @@ footer {
 }
  
 .top-footer {
-   background-color: rgba(148, 126, 0, 0.788); 
+   background-color: #d4af37; 
    padding: 2px;
    color: #fff; 
    text-align: center;
@@ -93,6 +96,8 @@ footer {
    margin-right: 25px;
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
+   text-decoration: none;
+   font-size: 14px;
 }
 
 .fbutton {
