--- a/Home/home.css
+++ b/Home/home.css
@@ -51,7 +51,7 @@ nav ul li a:hover {
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
-    border-radius: 2px;
+    border-radius: 4px;
     height: 70px;
  }
  
@@ -289,7 +289,7 @@ footer {
  }
   
  .top-footer {
-    background-color: rgba(148, 126, 0, 0.788); 
+    background-color: #d4af37; 
     padding: 2px;
     color: #fff; 
     text-align: center;
@@ -307,6 +307,8 @@ footer {
     margin-right: 25px;
     cursor: pointer;
     font-family: 'Raleway', sans-serif;
+    text-decoration: none;
+    font-size: 14px;
  }
 
  .fbutton {
