--- a/Home/member.css
+++ b/Home/member.css
@@ -17,6 +17,7 @@ nav {
 
 nav img {
    height: 100px;
+   border-radius: 4px;
 }
  
 nav ul {
@@ -50,6 +51,8 @@ nav ul li a:hover {
    align-items: center;
    margin-top: 10px;
    margin-bottom: 10px;
+   border-radius: 4px;
+   height: 70px;
 }
 
 .book-now-button a {
@@ -108,12 +111,13 @@ nav ul li a:hover {
 }
 
 .hero-book-now-button {
-   background-color: rgba(148, 126, 0, 0.788);
+   background-color: #d4ac2c;
    padding: 1%;
    font-family: 'Merriweather', serif;
    font-size: 2em;
    text-decoration: none;
    color: azure;
+   border-radius: 4px;
 }
 
 .hero-book-now-button:hover {
@@ -168,6 +172,7 @@ nav ul li a:hover {
 .room-image img {
    width: 100%;
    height: 100%;
+   border-radius: 35px;
 }
 
 .loyality-text {
@@ -194,6 +199,7 @@ nav ul li a:hover {
 .dining-image img {
    width: 100%;
    height: 100%;
+   border-radius: 35px;
 }
  
 .dining-text {
@@ -265,6 +271,7 @@ nav ul li a:hover {
 .amenities-image img {
    width: 100%;
    height: 100%;
+   border-radius: 35px;
 }
 
 footer {
@@ -276,7 +283,7 @@ footer {
 }
  
 .top-footer {
-   background-color: rgba(148, 126, 0, 0.788); 
+   background-color: #d4af37; 
    padding: 2px;
    color: #fff; 
    text-align: center;
@@ -295,6 +302,7 @@ footer {
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
    text-decoration: none;
+   font-size: 14px;
 }
 
 .fbutton {
