--- a/Home/payment.css
+++ b/Home/payment.css
@@ -86,6 +86,8 @@ nav ul li a:hover {
     align-items: center;
     margin-top: 10px;
     margin-bottom: 10px;
+    border-radius: 4px;
+    height: 70px;
 }
 
 .book-now-button a {
