--- a/Home/rooms.css
+++ b/Home/rooms.css
@@ -17,6 +17,7 @@ nav {
 
 nav img {
    height: 100px;
+   border-radius: 4px;
 }
  
 nav ul {
@@ -50,6 +51,8 @@ nav ul li a:hover {
    align-items: center;
    margin-top: 10px;
    margin-bottom: 10px;
+   border-radius: 4px;
+   height: 70px;
 }
 
 .book-now-button a {
@@ -74,7 +77,7 @@ footer {
 }
  
 .top-footer {
-   background-color: rgba(148, 126, 0, 0.788); 
+   background-color: #d4af37; 
    padding: 2px;
    color: #fff; 
    text-align: center;
@@ -92,6 +95,8 @@ footer {
    margin-right: 25px;
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
+   text-decoration: none;
+   font-size: 14px;
 }
 
 .fbutton {
