--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -52,6 +52,8 @@ nav ul li a:hover {
    align-items: center;
    margin-top: 10px;
    margin-bottom: 10px;
+   border-radius: 4px;
+   height: 70px;
 }
 
 .book-now-button a {
@@ -80,7 +82,7 @@ footer {
 }
  
 .top-footer {
-   background-color: rgba(148, 126, 0, 0.788); 
+   background-color: #d4af37; 
    padding: 2px;
    color: #fff; 
    text-align: center;
@@ -98,6 +100,7 @@ footer {
    margin-right: 25px;
    cursor: pointer;
    font-family: 'Raleway', sans-serif;
+   font-size: 14px;
 }
 
 .fbutton {
