--- a/Home/home.css
+++ b/Home/home.css
@@ -279,14 +279,6 @@ nav ul li a:hover {
     width: 100%;
     height: 100%;
 }
-
-footer {
-    font-family: 'Roboto', sans-serif;
-    background-color: beige;
-    color: black;
-    padding: 1%;
-    text-align: center; 
- }
   
  .top-footer {
     background-color: #d4af37; 
@@ -315,3 +307,42 @@ footer {
     text-decoration: none;
     color: #000000;
  }
+
+ .footer-container{
+    margin-top: 20px;
+    padding: 20px 0;
+    background-color: beige;
+    text-align: center;
+}
+
+.footer-container {
+    width: auto;
+    margin: 0 auto;
+}
+
+.contact-button a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #d4af37;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-family: 'Merriweather', serif;
+}
+
+.social-icons {
+    margin-top: 10px;
+}
+
+.social-icons .icon-link {
+    margin-right: 10px;
+}
+
+.social-icons img {
+    width: 30px;
+    height: 30px;
+}
+
+.social-icons .icon-link:hover img {
+    opacity: 0.8;
+}
