--- a/Home/payment.css
+++ b/Home/payment.css
@@ -102,3 +102,42 @@ nav ul li a:hover {
 .book-now-button a:hover {
     color: rgb(255, 230, 0);
 }
+
+.footer-container{
+    margin-top: 20px;
+    padding: 20px 0;
+    background-color: beige;
+    text-align: center;
+}
+
+.footer-container {
+    width: auto;
+    margin: 0 auto;
+}
+
+.contact-button a {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #d4af37;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-family: 'Merriweather', serif;
+}
+
+.social-icons {
+    margin-top: 10px;
+}
+
+.social-icons .icon-link {
+    margin-right: 10px;
+}
+
+.social-icons img {
+    width: 30px;
+    height: 30px;
+}
+
+.social-icons .icon-link:hover img {
+    opacity: 0.8;
+}
