--- a/Home/member.css
+++ b/Home/member.css
@@ -30,7 +30,6 @@ nav ul li {
    margin: 0 10px;
    display: flex;
    align-items: center;
-   
 }
  
 nav ul li a {
@@ -172,7 +171,7 @@ nav ul li a:hover {
 .room-image img {
    width: 100%;
    height: 100%;
-   border-radius: 35px;
+   border-radius: 15px;
 }
 
 .loyality-text {
@@ -199,7 +198,7 @@ nav ul li a:hover {
 .dining-image img {
    width: 100%;
    height: 100%;
-   border-radius: 35px;
+   border-radius: 15px;
 }
  
 .dining-text {
@@ -271,7 +270,7 @@ nav ul li a:hover {
 .amenities-image img {
    width: 100%;
    height: 100%;
-   border-radius: 35px;
+   border-radius: 15px;
 }
 
 footer {
@@ -279,7 +278,7 @@ footer {
    background-color: beige;
    color: black;
    padding: 1%;
-   text-align: center; 
+   text-align: center;
 }
  
 .top-footer {
@@ -311,15 +310,14 @@ footer {
 }
 
 .footer-container{
-   margin-top: 20px;
-   padding: 20px 0;
-   background-color: beige;
-   text-align: center;
-}
-
-.footer-container {
-   width: auto;
-   margin: 0 auto;
+  margin-top: 20px;
+  padding: 20px 0;
+  background-color: beige;
+  text-align: center;
+  width: 100%;
+  margin: 0 auto;
+  bottom: 0;
+  width: 100%
 }
 
 .contact-button a {
@@ -348,3 +346,4 @@ footer {
 .social-icons .icon-link:hover img {
    opacity: 0.8;
 }
+
