--- a/Home/booking.css
+++ b/Home/booking.css
@@ -8,6 +8,7 @@ header {
    padding: 0 20%;
    height: 100px;
    font-family: 'Roboto', sans-serif;
+   margin-bottom: 100px;
 }
 
 #center {
@@ -152,7 +153,7 @@ footer {
 }
 
 .top-footer {
-  background-color: rgba(148, 126, 0, 0.788); 
+  background-color: #d4af37;
   padding: 2px;
   color: #fff; 
   text-align: center;
@@ -180,29 +181,34 @@ footer {
   color: #000000;
 }
 
-#gold {
-background-color: rgba(148, 126, 0, 0.788);
-margin-top: 100px;
+.gold {
+background-color: #fdeaaa;
+margin-top: 50px;
 font-family: 'Roboto', sans-serif;
 padding-bottom: 25px;
 }
 
-#forms {
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-overflow: auto;
+form {
+   display:flex;
+   flex-direction: row;
+   justify-content: space-around;
+   padding-top: 20px;
+   padding-left: 15px;
+   padding-right: 15px;
 }
 
-@media screen and (max-width: 1150px){
-  #forms {
-     flex-direction: column;
-  }
-
-  form {
-     margin-left: 20px;
-  }
+.calendar {
+   margin-left: 100px !important;
 }
+
+.form {
+   margin: 0 20px 0 20px;
+}
+
+input {
+   max-width: 190px;
+}
+
 
 .inputs {
   display: flex;
@@ -216,27 +222,26 @@ label {
   font-size: 20px;
 }
 
-.day {
-width: 90px;
-height: 35px;
-margin-right: 5px;
-}
-
-.month {
-width: 90px;
-height: 35px;
-margin-right: 5px;
-}
-
-.year {
-width: 180px;
-height: 35px;
-margin-right: 5px;
-}
-
 select {
-width: 200px;
-height: 35px;
+   width: 200px;
+   height: 35px;
+}
+
+#rooms {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+}
+
+.room {
+   text-align: center;
+   width: 25%;
+   min-width: 250px;
+   padding: 25px;
+}
+
+.room:hover {
+   background-color: white;
 }
 
 .footer-container{
@@ -276,4 +281,22 @@ height: 35px;
 
 .social-icons .icon-link:hover img {
    opacity: 0.8;
+}
+
+.group {
+   display: flex;
+   flex-direction: row;
+}
+
+.nobottompadding {
+   padding-bottom: 0 !important;
+}
+
+.submit {
+   float: right;
+   margin-top: 15px;
+   margin-right: 15px;
+   width: 100px;
+   height: 40px;
+   font-size: 25px;
 }
