--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -1,9 +1,8 @@
 * {
    margin: 0;
    padding: 0;
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
- 
+
 header {
    background-color: white;
    padding: 0 20%;
@@ -24,7 +23,6 @@ nav ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
-   
 }
  
 nav ul li {
@@ -134,11 +132,13 @@ h2 {
    overflow: scroll;
    background-color: rgb(255, 232, 174);
    padding: 15px;
+   font-family: 'Antic Didone', serif;
 }
 
 h3 {
    text-align: center;
    margin-bottom: 10px;
+   font-family: 'Antic Didone', serif;
 }
 
 .unpara {
@@ -157,6 +157,7 @@ h3 {
    .para {
       display: none;
       visibility: collapse;
+      font-family: 'Antic Didone', serif;
    }
 
    .unpara {
