--- a/Home/rooms.css
+++ b/Home/rooms.css
@@ -61,7 +61,7 @@ nav ul li a:hover {
    color: white;
    margin-left: 20px;
    margin-right: 20px;
-   font-family: 'Merriweather', serif;
+   font-family: 'Merriweather', serif;;
 }
 
 .book-now-button a:hover {
@@ -139,156 +139,4 @@ footer {
 
 .social-icons .icon-link:hover img {
    opacity: 0.8;
-}
-
-.room1-image {
-   grid-area: room1-image;
-   overflow: hidden;
-}
-
-.room1-image img {
-   width: 100%;
-   height: 100%;
-   border-radius: 15px;
-}
-
-.room1-text {
-   grid-area: room1-text;
-   background-color: snow;
-   display: flex;
-   flex-flow: column wrap;
-   justify-content: center;
-   align-items: center;
-   text-align: center;
-   overflow: hidden;
-}
-
-.room1-text h2 {
-   font-family: 'Antic Didone', serif;
-   font-size: 2em;
-}
-
- .room2-image {
-   grid-area: room2-image;
-   overflow: hidden;
-}
-
-.room2-image img {
-   width: 100%;
-   height: 100%;
-   border-radius: 15px;
-}
- 
-.room2-text {
-   grid-area: room2-text;
-   background-color: snow;
-   display: flex;
-   flex-flow: column wrap;
-   align-items: center;
-   justify-content: center;
-   text-align: center;
-   overflow: hidden;
-}
-
-.room2-text h2 {
-   font-family: 'Antic Didone', serif;
-   font-size: 2em;
-}
-
-.room3-text {
-   grid-area: room3-text;
-   background-color: snow;
-   display: flex;
-   flex-flow: column wrap;
-   align-items: center;
-   justify-content: center;
-   text-align: justify;
-   overflow: hidden;
-}
-
-.room3-text h2 {
-   font-family: 'Antic Didone', serif;
-   font-size: 2em;
-   padding: 1%;
-}
-
-.room3-image {
-   grid-area: room3-image;
-   overflow: hidden;
-}
-
-.room3-image img {
-   width: 100%;
-   height: 100%;
-   border-radius: 15px;
-}
-
-.room4-image {
-   grid-area: room4-image;
-   overflow: hidden;
-}
-
-.room4-image img {
-   width: 100%;
-   height: 100%;
-   border-radius: 15px;
-}
-
-.room4-text {
-   grid-area: room4-text;
-   background-color: snow;
-   display: flex;
-   flex-flow: column wrap;
-   align-items: center;
-   justify-content: center;
-   text-align: justify;
-   overflow: hidden;
-}
-
-.room4-text h2 {
-   font-family: 'Antic Didone', serif;
-   font-size: 2em;
-   padding: 1%;
-}
-
-.grid-container {
-   display: grid;
-   grid-template-areas:
-    "room1-image room1-text"
-    "room2-text  room2-image"
-    "room3-image room3-text"
-    "room4-text  room4-image";
-   grid-template-columns: 1fr 1fr;
-   grid-template-rows: 1fr 1fr 1fr 1fr;
-   margin: 2.5%;
-   row-gap: 2.5%;
-}
-
-.book {
-   padding: 40px 0;
-   background: white;
-   color: black;
-}
-
-.book h1 {
-   font-size:28 px;
-
-}
-.book h1 span {
-   margin-left: 45%;
-   font-size: larger;
-   color:black;
-}
-
-.book input{
-   padding: 20px;
-}
-
-.book input:nth-last-child(1){
-   background: goldenrod;
-   color: black;
-}
-
-.form {
-   margin-left: 30%;
 }
