--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -1,8 +1,9 @@
 * {
    margin: 0;
    padding: 0;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+ 
 header {
    background-color: white;
    padding: 0 20%;
@@ -23,6 +24,7 @@ nav ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
+   
 }
  
 nav ul li {
@@ -132,13 +134,11 @@ h2 {
    overflow: scroll;
    background-color: rgb(255, 232, 174);
    padding: 15px;
-   font-family: 'Antic Didone', serif;
 }
 
 h3 {
    text-align: center;
    margin-bottom: 10px;
-   font-family: 'Antic Didone', serif;
 }
 
 .unpara {
@@ -157,7 +157,6 @@ h3 {
    .para {
       display: none;
       visibility: collapse;
-      font-family: 'Antic Didone', serif;
    }
 
    .unpara {
