--- a/Home/member.css
+++ b/Home/member.css
@@ -2,7 +2,11 @@
    margin: 0;
    padding: 0;
 }
- 
+
+html {
+   background-color: #d4d1c1;
+} 
+
 header {
    background-color: white;
    padding: 0 20%;
