--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -182,17 +182,84 @@ h3 {
    }
 }
 
-.footer-container{
-   margin-top: 20px;
-   padding: 20px 0;
-   background-color: beige;
-   text-align: center;
-}
-
 .footer-container {
    width: auto;
    margin: 0 auto;
 }
+
+.site-footer {
+   padding: 5em 0;
+   background: #f2f2f2;
+   font-size: 16px;
+}
+ 
+ .site-footer h3 {
+   margin-bottom: 20px;
+   font-family: "Rubik", arial, sans-serif;
+   font-size: 13px;
+   letter-spacing: .2em;
+   color: #b3b3b3;
+   text-transform: uppercase;
+ }
+ 
+ .site-footer .list-unstyled li {
+   margin-bottom: 15px;
+ }
+ 
+ .site-footer .list-unstyled li h3 {
+   font-size: 16px;
+   font-weight: normal;
+   font-family: "Rubik", arial, sans-serif;
+ }
+ 
+ .site-footer p {
+   color: #000;
+ }
+ 
+ .site-footer p:last-child {
+   margin-bottom: 0;
+ }
+ 
+ .site-footer a {
+   color: #000;
+ }
+ 
+ .site-footer a:hover {
+   opacity: .4;
+ }
+ 
+ .site-footer .footer-link li {
+   line-height: 1.5;
+   margin-bottom: 15px;
+ }
+ 
+ .site-footer hr {
+   width: 100%;
+ }
+ 
+ .subscribe .form-group {
+   position: relative;
+ }
+ 
+ .subscribe input[type="email"] {
+   padding-right: 40px;
+ }
+ 
+ .subscribe button {
+   border: none;
+   background: none;
+   cursor: pointer;
+   right: 10px;
+   top: 50%;
+   -webkit-transform: translateY(-50%);
+   -ms-transform: translateY(-50%);
+   transform: translateY(-50%);
+   position: absolute;
+ }
+ 
+ .subscribe button span {
+   font-size: 30px;
+ }
 
 .contact-button a {
    display: inline-block;
