--- a/Home/signup.css
+++ b/Home/signup.css
@@ -211,39 +211,107 @@ nav ul li a:hover {
 }
 
 .footer-container {
-   margin-top: 20px;
-   padding: 20px 0;
-   background-color: beige;
-   text-align: center;
-   width: 100%;
+   width: auto;
    margin: 0 auto;
-   bottom: 0;
-   width: 100%
+}
+
+.site-footer {
+   padding: 5em 0;
+   background: #f2f2f2;
+   font-size: 16px;
+}
+ 
+ .site-footer h3 {
+   margin-bottom: 20px;
+   font-family: "Rubik", arial, sans-serif;
+   font-size: 13px;
+   letter-spacing: .2em;
+   color: #b3b3b3;
+   text-transform: uppercase;
  }
  
- .contact-button a {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #d4af37;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    font-family: 'Merriweather', serif;
+ .site-footer .list-unstyled li {
+   margin-bottom: 15px;
  }
  
- .social-icons {
-    margin-top: 10px;
+ .site-footer .list-unstyled li h3 {
+   font-size: 16px;
+   font-weight: normal;
+   font-family: "Rubik", arial, sans-serif;
  }
  
- .social-icons .icon-link {
-    margin-right: 10px;
+ .site-footer p {
+   color: #000;
  }
  
- .social-icons img {
-    width: 30px;
-    height: 30px;
+ .site-footer p:last-child {
+   margin-bottom: 0;
  }
  
- .social-icons .icon-link:hover img {
-    opacity: 0.8;
+ .site-footer a {
+   color: #000;
  }
+ 
+ .site-footer a:hover {
+   opacity: .4;
+ }
+ 
+ .site-footer .footer-link li {
+   line-height: 1.5;
+   margin-bottom: 15px;
+ }
+ 
+ .site-footer hr {
+   width: 100%;
+ }
+ 
+ .subscribe .form-group {
+   position: relative;
+ }
+ 
+ .subscribe input[type="email"] {
+   padding-right: 40px;
+ }
+ 
+ .subscribe button {
+   border: none;
+   background: none;
+   cursor: pointer;
+   right: 10px;
+   top: 50%;
+   -webkit-transform: translateY(-50%);
+   -ms-transform: translateY(-50%);
+   transform: translateY(-50%);
+   position: absolute;
+ }
+ 
+ .subscribe button span {
+   font-size: 30px;
+ }
+
+.contact-button a {
+   display: inline-block;
+   padding: 10px 20px;
+   background-color: #d4af37;
+   color: #fff;
+   text-decoration: none;
+   border-radius: 5px;
+   font-family: 'Merriweather', serif;
+}
+
+.social-icons {
+   margin-top: 10px;
+}
+
+.social-icons .icon-link {
+   margin-right: 10px;
+}
+
+.social-icons img {
+   width: 30px;
+   height: 30px;
+}
+
+.social-icons .icon-link:hover img {
+   opacity: 0.8;
+}
