--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -133,6 +133,7 @@ h2 {
    background-color: rgb(255, 211, 128);
    padding: 15px;
    font-family: 'Antic Didone', serif;
+   overflow-x: hidden;
 }
 
 h3 {
@@ -158,6 +159,7 @@ h3 {
       display: none;
       visibility: collapse;
       font-family: 'Antic Didone', serif;
+      overflow-x: hidden;
    }
 
    .unpara {
@@ -170,6 +172,7 @@ h3 {
       margin-bottom: 100px;
       background-color: rgb(255, 211, 128);
       padding: 15px 25px;
+      overflow-x: hidden;
    }
 
    .img {
