--- a/Home/amenities.css
+++ b/Home/amenities.css
@@ -12,11 +12,12 @@ header {
 
 nav {
    display: flex;
-   justify-content: space-between;
+   justify-content: space-around;
 }
 
 nav img {
    height: 100px;
+   border-radius: 3px;
 }
  
 nav ul {
